# clang_plugins

./: .gitignore  CMakeLists.txt  README.md
Xcode Plugin/: README.md
Xcode Plugin/Clang LLVM 1.0 (Custom).xcplugin/Contents/: Info.plist
Xcode Plugin/Clang LLVM 1.0 (Custom).xcplugin/Contents/Resources/: Clang LLVM 1.0.xcspec
cmake/: UseClang.cmake
examples/: .gitignore  CMakeLists.txt  Example.xcconfig.in  README.md  configure.h.in  example_checker.cpp  example_plugin.cpp  example_tool.cpp
examples/Example/: main.m
examples/Example.xcodeproj/: project.pbxproj
examples/Example/Classes/: AppDelegate.h  AppDelegate.m  Example-Bridging-Header.h  Example.cpp  Example.h  Example.m  Example.swift  ViewController.h  ViewController.m
examples/Example/Configurations/: Config.xcconfig
xcode_toolchain/: CMakeLists.txt  README.md
xcode_toolchain/cmake/: XcodeToolchain.cmake
